/***********************************************************************
X3 ChangeLog

2009-12-18  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* x3.conf.example: Added type 8 for Nefarious 1.3.0.

	* src/proto-p10.c: Only use the old cloak.c code if type 7 is given.
	If type 8 is given then the cloaked hosts are picked up during burst
	(+cC)

2009-12-17  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/log.c: Revert message type to 5.

2009-12-17  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/mod-track.c: Fixed a crash with net rider kicks.

2009-12-12  Alex Schumann  <rubin@afternet.org>

	src/x3ldap.c: Fix crash bug with ldap adding users. Deal with some warnings.

	src/x3ldap.h: Deal with some warnings.

2009-12-09  Henrik Stuart  <evilnet@hstuart.dk>

	src/mod-python.c: add support for module_register.

2009-12-09  Henrik Stuart  <evilnet@hstuart.dk>

	src/mod-python.c: add support for log_register_type.

2009-12-09  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	src/nickserv.c: Shuffle the auto oper functions around to fix a
	desync issue.

	src/proto-p10.c: Ignore PRIV_NONE within the first 5 seconds of
	a client's connection. Temp fix for now.

2009-12-06  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Removed seemingly unnecessary "cannot invite"
	warning from chan_opt_automode.

2009-12-02  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Added merging SSL fingerprint lists during
	account merging.

2009-12-01  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/opserv.c: Added ADDALERT reactions noticeuser and msguser
	to go with trace reactions notice and privmsg.

2009-11-29  Matthew Beeching  <jobe@mdbnmet.co.uk>

	* src/nickserv.c: Rewrote parts of loc_auth() to get it working
	the same as cmd_auth() with regards to SSL fingerprint support.

2009-11-29  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/nickserv.c: Small tweak.

2009-11-29  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
